--- a/css/header.css
+++ b/css/header.css
@@ -11,6 +11,7 @@ header {
   right: 0;
   height: 80px;
   font-size: 1.6em;
+  padding-left: calc(100vw - 100%);
 }
 
 header nav {
@@ -54,6 +55,12 @@ header li.active a {
   display: none;
 }
 
+
+@media screen and (max-width: 1024px) {
+  header nav {
+    padding: 0 1.5rem;
+  }
+}
 
 @media screen and (max-width: 750px) {
   body:before {
