完成2048小游戏的页面布局以及显示样式

--- a/css/flex.css
+++ b/css/flex.css
@@ -93,3 +93,13 @@
   -ms-flex-pack: center;
   justify-content: space-around;
 }
+
+.flex-align-justify {
+  -webkit-align-content: space-between;
+  align-content: space-between;
+}
+
+.flex-align-around {
+  -webkit-align-content: space-around;
+  align-content: space-around;
+}
