--- a/case/2048/2048.css
+++ b/case/2048/2048.css
@@ -40,72 +40,117 @@ li {
   color: #e8e4e6;
 }
 
-li b {
+li div {
+  position: absolute;
+  width: 0;
+  height: 0;
+  padding: 50%;
+  left: 0;
+  top: 0;
+  border-radius: 6%;
+  transition: transform .2s ease-in;
+}
+
+li div b {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
 }
 
-.item-0{
+.item-0 {
   font-size: 0;
 }
 
-.item-2{
+.item-2 {
   font-size: 96px;
   color: #001e1d;
   background-color: #E3DBD0;
 }
 
-.item-4{
+.item-4 {
   font-size: 96px;
   color: #001e1d;
   background-color: #E3D8C4;
 }
 
-.item-8{
+.item-8 {
   font-size: 96px;
   background-color: #E8B387;
 }
 
-.item-16{
+.item-16 {
   font-size: 80px;
   background-color: #EAA07B;
 }
 
-.item-32{
+.item-32 {
   font-size: 80px;
   background-color: #EA8C73;
 }
 
-.item-64{
+.item-64 {
   font-size: 80px;
   background-color: #E77757;
 }
 
-.item-128{
+.item-128 {
   font-size: 64px;
   background-color: #E3CB83;
 }
 
-.item-256{
+.item-256 {
   font-size: 64px;
   background-color: #E3CA78;
 }
 
-.item-512{
+.item-512 {
   font-size: 64px;
   background-color: #E4C568;
 }
 
-.item-1024{
+.item-1024 {
   font-size: 56px;
   background-color: #E4C35A;
 }
 
-.item-2048{
+.item-2048 {
   font-size: 56px;
   background-color: #E2C14E;
+}
+
+@keyframes {
+  from {
+    transform: scale(.1);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+@-webkit-keyframes emerge {
+  from {
+    -webkit-transform: scale(.1);
+  }
+  to {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes emerge {
+  from {
+    transform: scale(.1);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+.item-emerge {
+  -webkit-transform: scale(.1);
+  transform: scale(.1);
+  -webkit-animation: emerge .35s ease-in-out forwards;
+  animation: emerge .35s ease-in-out forwards;
 }
 
 @media screen and (max-width: 750px) {
@@ -115,47 +160,47 @@ li b {
     padding: 48%;
   }
   
-  .item-2{
+  .item-2 {
     font-size: 12vw;
   }
   
-  .item-4{
+  .item-4 {
     font-size: 12vw;
   }
   
-  .item-8{
+  .item-8 {
     font-size: 12vw;
   }
   
-  .item-16{
+  .item-16 {
     font-size: 10vw;
   }
   
-  .item-32{
+  .item-32 {
     font-size: 10vw;
   }
   
-  .item-64{
+  .item-64 {
     font-size: 10vw;
   }
   
-  .item-128{
+  .item-128 {
     font-size: 8vw;
   }
   
-  .item-256{
+  .item-256 {
     font-size: 8vw;
   }
   
-  .item-512{
+  .item-512 {
     font-size: 8vw;
   }
   
-  .item-1024{
+  .item-1024 {
     font-size: 7vw;
   }
   
-  .item-2048{
+  .item-2048 {
     font-size: 7vw;
   }
 }
@@ -167,47 +212,47 @@ li b {
     padding: 0;
   }
   
-  .item-2{
+  .item-2 {
     font-size: 12vh;
   }
   
-  .item-4{
+  .item-4 {
     font-size: 12vh;
   }
   
-  .item-8{
+  .item-8 {
     font-size: 12vh;
   }
   
-  .item-16{
+  .item-16 {
     font-size: 10vh;
   }
   
-  .item-32{
+  .item-32 {
     font-size: 10vh;
   }
   
-  .item-64{
+  .item-64 {
     font-size: 10vh;
   }
   
-  .item-128{
+  .item-128 {
     font-size: 8vh;
   }
   
-  .item-256{
+  .item-256 {
     font-size: 8vh;
   }
   
-  .item-512{
+  .item-512 {
     font-size: 8vh;
   }
   
-  .item-1024{
+  .item-1024 {
     font-size: 7vh;
   }
   
-  .item-2048{
+  .item-2048 {
     font-size: 7vh;
   }
 }
