--- a/resume/resume.css
+++ b/resume/resume.css
@@ -70,10 +70,7 @@ section div i,
 
 @media screen and (max-width: 1024px) {
   article {
-    padding: 0 1.5rem;
-  }
-  article {
-    padding-right: 0;
+    padding-left: 1.5rem;
   }
 }
 
